bicep/aks-ag-istio/manifests/go_server.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server
spec:
  selector:
    app: go-server
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: go-server
  labels:
    app: go-server
spec:
  containers:
    - name: go-server
      image: <imageNameAndTag>
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 250m
          memory: 256Mi
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
          protocol: TCP
